--- a/ms-deposit-dev.properties
+++ b/ms-deposit-dev.properties
@@ -15,3 +15,6 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQL95Dialect
 spring.jpa.hibernate.ddl-auto=create
 logging.level.org.hibernate.sql=debug
+#REDIS
+spring.redis.port=6379
+spring.redis.host=localhost
